--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/react-dom": "18.0.5",
         "axios": "0.27.2",
         "axios-mock-adapter": "1.20.0",
+        "classnames": "^2.3.2",
         "date-fns": "^2.30.0",
         "lodash": "^4.17.21",
         "npm": "^10.1.0",
